[project]
name = "comfyui-kjnodes"
description = "Various quality of life -nodes for ComfyUI, mostly just visual stuff to improve usability."
version = "1.4.0"
license = {file = "LICENSE"}
dependencies = ["pillow>=10.3.0", "color-matcher", "matplotlib"]

[project.urls]
Repository = "https://github.com/kijai/ComfyUI-KJNodes"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "kijai"
DisplayName = "ComfyUI-KJNodes"
Icon = "https://avatars.githubusercontent.com/u/40791699"
